--- a/package.json
+++ b/package.json
@@ -5,10 +5,21 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/two-cards-partners/ --emptyOutDir",
+    "watch": "npx vite build --watch --emptyOutDir",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^7.2.4"
+    "autoprefixer": "^10.4.22",
+    "glob": "^13.0.0",
+    "postcss": "^8.5.6",
+    "sass": "^1.95.1",
+    "vite": "^7.2.4",
+    "vite-plugin-full-reload": "^1.2.0",
+    "vite-plugin-html-inject": "^1.1.2",
+    "vite-plugin-image-optimizer": "^2.0.3"
+  },
+  "dependencies": {
+    "sharp": "^0.34.5"
   }
 }
