--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite-plugin-image-optimizer": "^2.0.3"
   },
   "dependencies": {
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "swiper": "^12.0.3"
   }
 }
