--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build --base=/two-cards-partners/ --emptyOutDir",
     "watch": "npx vite build --watch --emptyOutDir",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
+    "gh-pages": "^6.3.0",
     "glob": "^13.0.0",
     "postcss": "^8.5.6",
     "sass": "^1.95.1",
